contrib/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz218303.cpp
#
%:/*empty*/
%:/*empty*/nothing

int main218303(int argc, char** argv) {
#warning ssss
    return 0;
}

%:something
#/*empty*/


%:/*s*/define A218303

%:/*aa*/ifdef A218303
int a218303 =5;
%:else
int b218303 = 10;
#endif

int boo218303() {
%:warning ssss
    a218303 = 2;
    b2118303 = 1;
}

